--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-YUGIBOY
+<title>YUGIBOY</title>
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+</style>
+<h1>YUGIBOY</h1>
+<img src="lol.jpg">
